# json-admin

./: AGENTS.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: lint.yml
examples/: minimal_app.py  provider_demo.py
examples/data/: app_settings.json  feature_flags.json  icons_report.json  icons_support_report.json
jsonadmin/: __init__.py  admin.py  extra.py  icons.py  page.py  pages.py
jsonadmin/html/: base.html  index.html  login.html
