[project]
name = "json-admin"

# •	PATCH (x.y.Z) → увеличивается при багфиксе, который не ломает совместимость.
# •	MINOR (x.Y.z) → увеличивается при добавлении новой функциональности, но без ломающих изменений (backward-compatible).
# •	MAJOR (X.y.z) → увеличивается при изменениях, которые ломают обратную совместимость.
version = "0.1.0"

description = "Simple web admin interface to manage .json file"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "LoveBloodAndDiamonds", email = "ayazshakirzyanov27@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litestar>=2.18.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.41.0",
]
[dependency-groups]
dev = [
    "build>=1.3.0",
    "pre-commit>=4.3.0",
    "twine>=6.2.0",
]
[project.urls]
Github = "https://github.com/LoveBloodAndDiamonds/json-admin"
Author = "https://t.me/LoveBloodAndDiamonds"
